# DSVita

./: .gitignore  .gitmodules  Cargo.toml  README.md  build.rs  imgui_impl_sdl_gl3.cpp  imgui_wrapper.h  ldscript.ld  profilerino.c  rust-toolchain.toml  soundtouch_wrapper.h  vita_gl_wrapper.c
.cargo/: config  config.toml
.github/workflows/: rust.yml
.zed/: settings.json  tasks.json
builtins/: cache.c
kubridge_binding/: Cargo.toml  build.rs
kubridge_binding/src/: lib.rs
macros/: Cargo.toml
macros/src/: lib.rs
rcheevos/: Cargo.toml  build.rs
rcheevos/src/: lib.rs
screenlayouts/: Cargo.toml  build.rs
screenlayouts/src/: lib.rs
src/: bitset.rs  cartridge.rs  cartridge_io.rs  cartridge_metadata.rs  cartridge_reader.rs  fast_fixed_fifo.rs  fixed_fifo.rs  global_settings.rs  host_memory.rs  linked_list.rs  logging.rs  main.rs  math.rs  memory.rs  profiling.rs  ra_context.rs  scheduler.rs  schedulers.rs  screen_layouts.rs  settings.rs  simple_tree_map.rs  soundtouch.rs  utils.rs
src/core/: blow_mic_data.rs  cp15.rs  cpu.rs  cpu_regs.rs  cycle_manager.rs  div_sqrt.rs  emu.rs  exception_handler.rs  ipc.rs  mod.rs  rtc.rs  spi.rs  spu.rs  thread_regs.rs  timers.rs  wifi.rs
src/core/graphics/: gl_glyph.rs  gl_rectangle.rs  gl_utils.rs  gpu.rs  gpu_mem_buf.rs  gpu_renderer.rs  gpu_shaders.rs  mod.rs
src/core/graphics/gpu_2d/: mod.rs  registers_2d.rs  renderer_2d.rs  renderer_regs_2d.rs  renderer_soft_2d.rs
src/core/graphics/gpu_3d/: geometry_3d.rs  gx_cmd_fifo.rs  matrix_vec.rs  mod.rs  registers_3d.rs  renderer_3d.rs  texture_cache.rs
src/core/graphics/shaders/cg/: capture_frag.cg  capture_vert.cg  merge_frag.cg  merge_vert.cg  ra_frag.cg  ra_vert.cg  rect_frag.cg  rect_vert.cg  text_frag.cg  text_vert.cg
src/core/graphics/shaders/glsl/: capture_frag.glsl  capture_vert.glsl  merge_frag.glsl  merge_vert.glsl  (+6 more)
src/core/hle/: arm7_hle.rs  bios.rs  bios_lookup_table.rs  cart_hle.rs  firmware_hle.rs  mic_hle.rs  mod.rs  power_manager_hle.rs  rtc_hle.rs  sound_hle.rs  sound_nitro.rs  touchscreen_hle.rs  wifi_hle.rs
src/core/memory/: bios.rs  cartridge.rs  contiguous_mem.rs  dma.rs  io.rs  io_arm7.rs  io_arm7_lut.rs  io_arm9.rs  io_arm9_lut.rs  main.rs  mem.rs  mmu.rs  mod.rs  oam.rs  palettes.rs  regions.rs  tcm.rs  vmem.rs  vram.rs  wifi.rs  wram.rs
src/cpu/: cp15_context.rs  mod.rs  thread_context.rs
src/emu/: bios.rs  bios_lookup_table.rs  cp15.rs  cpu.rs  cpu_regs.rs  cycle_manager.rs  div_sqrt.rs  emu.rs  exception_handler.rs  input.rs  ipc.rs  mod.rs  rtc.rs  spi.rs  spu.rs  thread_regs.rs  timers.rs
src/emu/gpu/: gpu.rs  gpu_2d.rs  gpu_2d_mem_buf.rs  gpu_2d_text.rs  gpu_3d.rs  gpu_3d_renderer.rs  mod.rs
src/emu/gpu/gl/: gl_glyph.rs  gl_utils.rs  gpu_2d_renderer.rs  gpu_2d_sub_renderer.rs  mod.rs
src/emu/hle/: arm7_hle.rs  bios.rs  bios_lookup_table.rs  cart_hle.rs  firmware_hle.rs  mod.rs  power_manager_hle.rs  rtc_hle.rs  sound_hle.rs  sound_nitro.rs  touchscreen_hle.rs
src/emu/memory/: bios.rs  cartridge.rs  dma.rs  io_arm7.rs  io_arm9.rs  main.rs  mem.rs  mmu.rs  oam.rs  palettes.rs  tcm.rs  vram.rs  wram.rs
src/hle/: bios.rs  bios_context.rs  bios_lookup_table.rs  cp15.rs  cp15_context.rs  cpu.rs  cpu_regs.rs  cycle_manager.rs  div_sqrt_context.rs  exception_handler.rs  hle.rs  input.rs  input_context.rs  ipc.rs  ipc_handler.rs  mod.rs  registers.rs  rtc.rs  rtc_context.rs  spi.rs  spi_context.rs  spu.rs  spu_context.rs  thread_context.rs  thread_regs.rs  timers.rs  timers_context.rs
src/hle/gpu/: gpu.rs  gpu_2d.rs  gpu_2d_context.rs  gpu_2d_text.rs  gpu_3d.rs  gpu_3d_context.rs  gpu_3d_renderer.rs  gpu_context.rs  mod.rs
src/hle/indirect_memory/: indirect_memory_handler.rs  indirect_memory_multiple_handler.rs  mod.rs
src/hle/memory/: bios.rs  cartridge.rs  cartridge_context.rs  dma.rs  io_arm7.rs  io_arm9.rs  io_ports.rs  io_ports_arm7.rs  io_ports_arm9.rs  main.rs  main_memory.rs  mem.rs  mem_handler.rs  memory.rs  mmu.rs  mod.rs  oam.rs  oam_context.rs  palettes.rs  palettes_context.rs  regions.rs  tcm.rs  tcm_context.rs  vram.rs  vram_context.rs  wram.rs  wram_context.rs
src/hle/memory/handler/: mem_handler.rs  mem_multiple_handler.rs  mod.rs
src/hle/memory/indirect_memory/: indirect_mem_handler.rs  indirect_mem_multiple_handler.rs  mod.rs
src/jit/: inst_branch_handler.rs  inst_cp15_handler.rs  inst_cpu_regs_handler.rs  inst_exception_handler.rs  inst_info.rs  inst_info_thumb.rs  inst_jit_handler.rs  inst_mem_handler.rs  inst_nitrosdk_handler.rs  inst_thread_regs_handler.rs  inst_threag_regs_handler.rs  jit.rs  jit_asm.rs  jit_asm_common_funs.rs  jit_cycle_handler.rs  jit_memory.rs  jit_memory_map.rs  jit_perf_log.rs  mod.rs  op.rs  reg.rs  thread_context.rs
src/jit/analyzer/: asm_analyzer.rs  basic_block.rs  mod.rs
src/jit/assembler/: basic_block.rs  block_asm.rs  block_inst.rs  block_inst_list.rs  block_reg_allocator.rs  block_reg_set.rs  mod.rs  reg_alloc.rs  reg_allocator.rs  vixl.rs
src/jit/assembler/arm/: alu_assembler.rs  branch.rs  branch_assembler.rs  data_processing.rs  mod.rs  single_data_transfer.rs  transfer_assembler.rs  vixl.rs
src/jit/assembler/thumb/: mod.rs
src/jit/disassembler/: alu_instructions.rs  branch_instructions.rs  delegations.rs  lookup_table.rs  mod.rs  transfer_instructions.rs
src/jit/disassembler/thumb/: alu_instructions_thumb.rs  branch_instructions_thumb.rs  delegations_thumb.rs  lookup_table_thumb.rs  mod.rs  transfer_instructions_thumb.rs
src/jit/emitter/: alu.rs  branch.rs  cp15.rs  emit.rs  emit_alu.rs  emit_branch.rs  emit_cp15.rs  emit_psr.rs  emit_swi.rs  emit_transfer.rs  emit_unknown.rs  mod.rs  swi.rs  transfer.rs
src/jit/emitter/thumb/: emit_alu_thumb.rs  emit_branch_thumb.rs  emit_swi_thumb.rs  emit_thumb.rs  emit_transfer_thumb.rs  mod.rs
src/mmap/: linux.rs  mod.rs  vita.rs
src/presenter/: linux.rs  menu.rs  mod.rs  ui.rs  vita.rs
static/sce_sys/livearea/contents/: template.xml
vitaGL/: Cargo.toml  build.rs  vita_gl_wrapper.c
vitaGL/src/: lib.rs
vitabuild/: Cargo.toml
vitabuild/src/: lib.rs
vixl/: Cargo.toml  build.rs
vixl/src/: lib.rs
(+91 files in other folders)
